test/error/StThrowNonString.fu
public static class Test
{
	static void Foo() throws Exception
	{
		throw Exception(42); //ERROR: Exception accepts a string argument
	}

	public static bool Run()
	{
		return true;
	}
}
